--- a/index.html
+++ b/index.html
@@ -22,69 +22,74 @@
   
 </head>
 <body>
+  <header>
+    <img src="images/logo.svg" alt="Clipboard logo">
+    <h1>A history of everything you copy</h1>
+    
+    <p>Clipboard allows you to track and organize everything you copy. Instantly access your clipboard on all your devices.</p>
 
-  A history of everything you copy
+    <div>
+      <button type="button">Download for iOS</button>
+      <button type="button">Download for Mac</button>
+    </div>
+  </header>
 
-  Clipboard allows you to track and organize everything you 
-  copy. Instantly access your clipboard on all your devices.
-
-  Download for iOS
-  Download for Mac
-
+  <main>
   Keep track of your snippets
 
-  Clipboard instantly stores any item you copy in the cloud, 
-  meaning you can access your snippets immediately on all your 
-  devices. Our Mac and iOS apps will help you organize everything.
+    Clipboard instantly stores any item you copy in the cloud, 
+    meaning you can access your snippets immediately on all your 
+    devices. Our Mac and iOS apps will help you organize everything.
 
-  Quick Search
+    Quick Search
 
-  Easily search your snippets by content, category, web address, application, and more.
+    Easily search your snippets by content, category, web address, application, and more.
 
-  iCloud Sync
+    iCloud Sync
 
-  Instantly saves and syncs snippets across all your devices.
+    Instantly saves and syncs snippets across all your devices.
 
-  Complete History
+    Complete History
 
-  Retrieve any snippets from the first moment you started using the app.
+    Retrieve any snippets from the first moment you started using the app.
 
-  Access Clipboard anywhere
+    Access Clipboard anywhere
 
-  Whether you’re on the go, or at your computer, you can access all your Clipboard 
-  snippets in a few simple clicks.
+    Whether you’re on the go, or at your computer, you can access all your Clipboard 
+    snippets in a few simple clicks.
 
-  Supercharge your workflow
+    Supercharge your workflow
 
-  We’ve got the tools to boost your productivity.
+    We’ve got the tools to boost your productivity.
 
-  Create blacklists
+    Create blacklists
 
-  Ensure sensitive information never makes its way to your clipboard by excluding certain sources.
+    Ensure sensitive information never makes its way to your clipboard by excluding certain sources.
 
-  Plain text snippets
+    Plain text snippets
 
-  Remove unwanted formatting from copied text for a consistent look.
+    Remove unwanted formatting from copied text for a consistent look.
 
-  Sneak preview
+    Sneak preview
 
-  Quick preview of all snippets on your Clipboard for easy access.
+    Quick preview of all snippets on your Clipboard for easy access.
 
-  Clipboard for iOS and Mac OS
+    Clipboard for iOS and Mac OS
 
-  Available for free on the App Store. Download for Mac or iOS, sync with iCloud 
-  and you’re ready to start adding to your clipboard.
+    Available for free on the App Store. Download for Mac or iOS, sync with iCloud 
+    and you’re ready to start adding to your clipboard.
 
-  Download for iOS
-  Download for Mac
+    Download for iOS
+    Download for Mac
+  </main>
+  
+  <footer>
 
-  FAQs
+    FAQs
   Contact Us
   Privacy Policy
   Press Kit
   Install Guide
-  
-  <footer>
     <p class="attribution">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
       Coded by <a href="#">Your Name Here</a>.
