desktop section structure
desktop section structure done

--- a/index.html
+++ b/index.html
@@ -18,7 +18,6 @@
   
   <title>Frontend Mentor | Clipboard landing page</title>
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
   
 </head>
 <body>
@@ -34,28 +33,33 @@
       <button type="button" class="button flex-item">Download for Mac</button>
     </div>
   </header>
-<!--
-  <main>
-  Keep track of your snippets
 
-    Clipboard instantly stores any item you copy in the cloud, 
-    meaning you can access your snippets immediately on all your 
-    devices. Our Mac and iOS apps will help you organize everything.
+  <main class="main">
+    <section class="desktop-section">
+      <div class="desktop-section__header">
+        <h2 class="desktop-section__title">Keep track of your snippets</h2>
+        <p class="desktop-section__paragraph">Clipboard instantly stores any item you copy in the cloud, meaning you can access your snippets immediately on all your devices. Our Mac and iOS apps will help you organize everything.</p>
+      </div>
 
-    Quick Search
+      <div class="desktop-section__features">
+        <div class="features__img">
+          <img src="./images/image-computer.png" alt="">
+        </div>
+        
+        <div class="features__text">
+          <h3 class="features__title">Quick Search</h3>
+          <p class="features__paragraph">Easily search your snippets by content, category, web address, application, and more.</p>
 
-    Easily search your snippets by content, category, web address, application, and more.
+          <h3 class="features__title">iCloud Sync</h3>
+          <p class="features__paragraph">Instantly saves and syncs snippets across all your devices.</p>
 
-    iCloud Sync
-
-    Instantly saves and syncs snippets across all your devices.
-
-    Complete History
-
-    Retrieve any snippets from the first moment you started using the app.
-
-    
+          <h3 class="features__title">Complete History</h3>
+          <p class="features__paragraph">Retrieve any snippets from the first moment you started using the app.</p>
+        </div>
+      </div>
+    </section>
   </main>
+  <!--
   Access Clipboard anywhere
 
     Whether you’re on the go, or at your computer, you can access all your Clipboard 
