--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <p class="desktop-section__paragraph">Clipboard instantly stores any item you copy in the cloud, meaning you can access your snippets immediately on all your devices. Our Mac and iOS apps will help you organize everything.</p>
       </div>
 
-      <div class="desktop-section__features">
+      <div class="desktop-section__features flex">
         <div class="features__img">
           <img src="./images/image-computer.png" alt="">
         </div>
