features section structure done

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
       <h2 class="features-section__title">Supercharge your workflow</h2>
       <p class="features-section__paragraph">We’ve got the tools to boost your productivity.</p>
 
-      <div class="features-section__details">
+      <div class="features-section__details flex">
         <div class="details-box">
           <img src="images/icon-blacklist.svg" alt="" class="details-box__icon">
           <h3 class="details-box__title">Create blacklists</h3>
@@ -94,7 +94,7 @@
         </div>
       </div>
 
-      <div class="features-section__logo">
+      <div class="features-section__logo flex">
         <img src="./images/logo-google.png" alt="">
         <img src="images/logo-ibm.png" alt="">
         <img src="./images/logo-microsoft.png" alt="">
@@ -104,7 +104,6 @@
     </section>
   </main>
 
-  
   <!--
     Clipboard for iOS and Mac OS
 
